Fixed: tests document images stretched

--- a/wwwroot/css/view.css
+++ b/wwwroot/css/view.css
@@ -151,3 +151,9 @@
 }
 
 /*end of view progress bar*/
+
+/*test case page css*/
+.pswp img {
+    max-width: none;
+    object-fit: contain;
+}
